@@ -4,6 +4,8 @@
   BugFix: Void Linux RSS news page was outdated.
   BugFix: Files tab now shows file list of non installed packages.
   BugFix: If there's xbps inside an upgrade, it is upgraded first.
+  Added Project Trident support.
+  Added Lumina desktop support.
   Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
 	(without LXQt libs) and its use is mandatory in OctoXBPS.
   Added Terminal tab to execute actions manually.
